--- a/config.toml
+++ b/config.toml
@@ -37,3 +37,8 @@ footnotereturnlinkcontents = "↩"
   highlightjsCDN = "//cdn.bootcss.com"
   highlightjsLang = ["r", "yaml", "tex"]
   highlightjsTheme = "github"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
